# pylib-editor

./: .editorconfig  .eslintrc.cjs  .gitignore  README.md  bun.lockb  jsconfig.json  package.json  postcss.config.js  tsconfig.json  vite.config.js  vite.config.ts
src/: app-routes.jsx  app-routes.tsx  index.d.ts  main.jsx  main.tsx  mixins.css  styles.css  util.ts  variables.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: config.rs  keyboard_mapping.rs  library.rs  main.rs  operates.rs
src-tauri/src/entities/: meta.rs  mod.rs  package.rs  phase.rs
src-tauri/src/errors/: database.rs  library.rs  mod.rs
src-tauri/src/operates/: mod.rs  project.rs
src-tauri/src/repos/: meta.rs  mod.rs  stat.rs
src/components/: Input.jsx  Input.module.css  index.ts
src/components/ActionIcon/: ActionIcon.jsx  ActionIcon.module.css  ActionIcon.tsx  index.js
src/components/ActivatableLink/: ActivatableLink.jsx  ActivatableLink.module.css  ActivatableLink.tsx  index.js
src/components/Button/: Button.jsx  Button.module.css  Button.tsx
src/components/Divider/: Divider.jsx  Divider.module.css  Divider.tsx
src/components/Input/: Input.jsx  Input.module.css  Input.tsx
src/components/Spacer/: Spacer.jsx  Spacer.tsx
src/components/WindowMoveHandler/: WindowMoveHandler.jsx  WindowMoveHandler.module.css  WindowMoveHandler.tsx  index.js
src/context/: project.js  project.ts
src/hooks/: useGlobalListener.js  useGlobalListener.ts
src/layout/: BootLayout.jsx  BootLayout.module.css  ContentLayout.jsx  ContentLayout.module.css  index.ts
src/layout/BootLayout/: BootLayout.jsx  BootLayout.tsx  index.js
src/layout/ContentLayout/: ContentLayout.module.css  ContentLayout.tsx  index.js
src/navigation/: NavigationSection.jsx  NavigationSection.module.css  NavigationSection.tsx  useOpenProject.ts
src/pages/: index.ts
src/pages/NewLibrary/: NewLibrary.jsx  NewLibrary.module.css  NewLibrary.tsx  index.js
src/pages/PhaseList/: PhaseList.module.css  PhaseList.tsx
src/pages/PhaseList/components/: Paginator.module.css  Paginator.tsx  Search.module.css  Search.tsx
src/pages/ProjectGlance/: ProjectGlance.module.css  ProjectGlance.tsx  glance_context.tsx  query_library.ts
src/pages/Welcome/: Welcome.jsx  Welcome.module.css  Welcome.tsx
(+4 files in other folders)
