[package]
name = "pylib_editor"
version = "0.1.0"
description = "Pinyin Input Method Library Editor."
authors = ["midnite"]
license = "Apache-2.0"
repository = "https://github.com/vixalie/pylib-editor"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-save", "dialog-open", "dialog-message", "dialog-confirm", "dialog-ask", "macos-private-api", "window-unminimize", "window-close", "window-start-dragging", "window-show", "window-hide", "window-maximize", "window-unmaximize", "window-minimize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4.3"
anyhow = "1.0.75"
thiserror = "1.0.50"
serde_repr = "0.1.17"
tokio = { version = "1.34.0", features = ["full"] }
uuid = "1.6.1"
rusqlite = { version = "0.30.0", features = ["modern-full"] }
directories = "5.0.1"
toml = "0.8.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
