[package]
name = "pylib"
version = "0.1.0"
description = "Pinyin Input Method Library Editor."
authors = ["midnite"]
license = "Apache-2.0"
repository = "https://github.com/vixalie/pylib-editor"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
serde_repr = "0.1.17"
uuid = "1.6.1"
directories = "5.0.1"
toml = "0.8.8"
chrono = "0.4.31"
bincode = "1.3.3"
once_cell = "1.19.0"
rust_decimal = "1.33.1"
tauri-plugin-dialog = "2.0.0-beta.0"
tauri-utils = "1.5.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
